Added JavaFx depedencies